force-app/main/default/objects/Privileged_Access_Request__c/Privileged_Access_Request__c.object-meta.xml
<CustomObject>
    <description>Holds vital information related to user Access Requests which will be used to automatically grant/revoke privileged access from users</description>
    <label>Privileged Access Request</label>
    <nameField>
        <displayFormat>PAR-{00000000}</displayFormat>
        <label>Privileged Access Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Privileged Access Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>