force-app/main/default/objects/Privileged_Access_Request__c/fields/Access_Request__c.field-meta.xml
<CustomField>
    <fullName>Access_Request__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Parent Access Request</description>
    <label>Access Request</label>
    <referenceTo>Access_Request__c</referenceTo>
    <relationshipLabel>Privileged Access Requests</relationshipLabel>
    <relationshipName>Privileged_Access_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>