force-app/main/default/objects/Privileged_Access_Request__c/fields/Access_Request_Record_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Access_Request_Record_Type_Id__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Formula variable for PAM flow set entry conditions</description>
    <formula>CASESAFEID(Access_Request__r.RecordTypeId)</formula>
    <label>Access Request Record Type Id</label>
    <type>Text</type>
</CustomField>