force-app/main/default/objects/Privileged_Access_Request__c/fields/Access_Request_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Access_Request_Record_Type_Name__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Formula variable for PAM flow set entry conditions</description>
    <formula>Access_Request__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Access Request Record Type Name</label>
    <type>Text</type>
</CustomField>