force-app/main/default/objects/Privileged_Access_Request__c/fields/Actual_Access_Granted_Time__c.field-meta.xml
<CustomField>
    <fullName>Actual_Access_Granted_Time__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>The date/time when access is actually granted. If this field is empty then the granting process failed.</description>
    <label>Actual Access Granted Time</label>
    <type>DateTime</type>
</CustomField>