force-app/main/default/objects/Privileged_Access_Request__c/fields/Previous_Profile_Id__c.field-meta.xml
<CustomField>
    <fullName>Previous_Profile_Id__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>The Id of the profile the user had before being granted Admin Access, so we can revert their permission</description>
    <label>Previous Profile Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>