force-app/main/default/objects/Privileged_Access_Request__c/fields/Revoke_Time__c.field-meta.xml
<CustomField>
    <fullName>Revoke_Time__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Time when the access will be revoked</description>
    <label>Revoke Time</label>
    <type>DateTime</type>
</CustomField>