force-app/main/default/objects/Privileged_Access_Request__c/fields/Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Time__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Time when the access is being granted (this is to allow users to submit for future access)</description>
    <label>Start Date/Time</label>
    <type>DateTime</type>
</CustomField>